# phyqus_lib

./: Dependencies.md  README.md  Release log.md  __init__.py  base_classes.py  check_dependencies.py  dependencies.json  setup.cfg
Documents/: index.md
Documents/Design/: DE000_library_design.md  DE001_standard_error_propagation_model.md  DE002_physical_arithmetics.md  index.md
Documents/References/: UD001_base_classes.md  index.md
Documents/Requirements/: RE001_base_classes.md  index.md
Documents/Tests/: TE001_base_classes.md  index.md  tested_OS.md  traceability.md
Documents/UML/: components.pu
Documents/UML/base_classes/: MeasuredValue.iuml  MeasuredValueABC.iuml  classes.pu  components.iuml
Documents/UML/design/: library_objects.pu
Tests/: UT001_base_classes.py
