[metadata]
name = phyqus_lib
version = 0.1.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Physical units, measurements with uncertainty, etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/phyqus_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    phyqus_lib =
packages = phyqus_lib, phyqus_lib.Tests
install_requires =
    introspection_lib >= 0.4
